# Zpetnovazebnik

./: .gitignore  .travis.yml  LICENSE.MIT  Procfile  README.md  pyproject.toml  pytest.ini  requirements-local.txt  requirements.txt
blog/: admin.py  apitest.py  forms.py  models.py  views.py
blog/management/commands/: import_course.py
blog/migrations/: 0004_longer_password.py  0005_title_null.py  0006_course_text.py  0007_auto_20190406_1516.py  0008_course_archived_box.py  0009_auto_20191219_1401.py  0010_course_naucse_slug.py  0011_alter_course_naucse_slug.py
blog/static/css/: style.css
blog/templates/: 500.html
blog/templates/things/: add_comment_to_session.html  admin_course_change_list.html  base.html  course_list.html  session_detail.html  session_list.html
blog/tests/: test_models.py
blog/tests/fixtures/cassettes/: course.json
feedback/: requirements.txt  settings.py  settings_production.py  urls.py  wsgi.py
feedback/blog/: admin.py  models.py  urls.py  views.py
feedback/blog/migrations/: 0001_initial.py  0002_session_slug.py  0003_course_unique_slug.py
feedback/blog/static/css/: style.css
feedback/blog/templates/: 404.html  500.html
feedback/blog/templates/things/: add_comment_to_session.html  base.html  course_list.html  session_detail.html  session_list.html
feedback/feedback/: settings.py  settings_production.py  wsgi.py
static/: requirements.txt
