[tool.poetry]
name = "zpetnovazebnik"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.9"
Django = ">=4.1.1"
whitenoise = ">=6.2.0"
mistune = ">=2.0.4"
requests = ">=2.28.1"
pytz = ">=2022.2.1"
django-markdown2 = ">=0.3.1"
Pillow = ">=9.2.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.3"
betamax = ">=0.8.1"
pytest-django = ">=4.5.2"
six = ">=1.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
